--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -11,6 +11,10 @@
     transition: opacity 0.3s ease, max-height 0.3s ease;
 }
 
+.control {
+    margin-bottom: 7.5em;
+}
+
 
 .card-text.answer {
     min-height: 225px;
@@ -24,6 +28,27 @@
 
 .card {
     margin: 1rem;
+}
+
+.card-footer {
+    padding: 10px;
+    height: auto;
+}
+
+/* Set the position of the footer to absolute */
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    /* Set the height of the footer to your desired height */
+}
+
+/* Set the position of the main content container to relative */
+.container {
+    position: relative;
+    min-height: calc(100vh - 50px);
+    /* Set the minimum height of the container to 100% minus the height of the footer */
 }
 
 @media (min-width: 769px) {
