--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -44,26 +44,51 @@
             ></p>
           </div>
         </div>
-        <footer class="card-footer">
-          <a href="#" class="card-footer-item mx-5" id="prev-question">
-            <button class="button is-medium is-info is-light is-rounded">
-              Prev
-            </button>
+
+        <div class="btn-container">
+          <a href="#" class="card-footer-item" id="prev-question">
+            <button class="button is-fullwidth is-info is-rounded">Prev</button>
           </a>
-          <a href="#" class="card-footer-item mx-5">
+          <a href="#" class="card-footer-item">
             <button
               id="show-answer"
-              class="button is-medium is-success is-rounded"
+              class="button is-fullwidth is-success is-rounded"
             >
               Show Answer
             </button>
           </a>
-          <a href="#" class="card-footer-item mx-5" id="next-question">
-            <button class="button is-medium is-info is-light is-rounded">
-              Next
-            </button>
+          <a href="#" class="card-footer-item" id="next-question">
+            <button class="button is-fullwidth is-info is-rounded">Next</button>
           </a>
-        </footer>
+        </div>
+        <!-- <footer class="card-footer">
+          <div class="columns is-mobile is-gapless">
+          <div class="column is-one-third">
+            <a href="#" class="card-footer-item" id="prev-question">
+              <button class="button is-fullwidth is-info is-rounded">
+                Prev
+              </button>
+            </a>
+          </div>
+          <div class="column is-one-third">
+            <a href="#" class="card-footer-item">
+              <button
+                id="show-answer"
+                class="button is-fullwidth is-success is-rounded"
+              >
+                Show Answer
+              </button>
+            </a>
+          </div>
+          <div class="column is-one-third">
+            <a href="#" class="card-footer-item" id="next-question">
+              <button class="button is-fullwidth is-info is-rounded">
+                Next
+              </button>
+            </a>
+          </div>
+          </div>
+        </footer> -->
       </div>
     </div>
   </div>
