--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -16,11 +16,11 @@
 }
 
 .card-text.answer {
-    min-height: 225px;
+    min-height: 200px;
 }
 
 .card-header-title {
-    min-height: 120px;
+    min-height: 90px;
     text-align: center;
     margin: 1rem;
 }
@@ -42,12 +42,12 @@
     margin: 1rem;
 }
 
-footer {
+/* footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 50px;
-}
+} */
 
 .container {
     position: relative;
@@ -71,14 +71,6 @@ footer {
         max-width: 720px;
     }
 
-    .card-footer .columns {
-        flex-direction: column;
-    }
-
-    .card-footer .column {
-        flex: 1;
-        margin: 0;
-    }
 
 
 
