many different style and layout changes

--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -46,10 +46,14 @@
         </div>
 
         <div class="btn-container">
-          <a href="#" class="card-footer-item" id="prev-question">
+          <a
+            href="javascript:void(0);"
+            class="card-footer-item"
+            id="prev-question"
+          >
             <button class="button is-fullwidth is-info is-rounded">Prev</button>
           </a>
-          <a href="#" class="card-footer-item">
+          <a href="javascript:void(0);" class="card-footer-item">
             <button
               id="show-answer"
               class="button is-fullwidth is-success is-rounded"
@@ -57,38 +61,14 @@
               Show Answer
             </button>
           </a>
-          <a href="#" class="card-footer-item" id="next-question">
+          <a
+            href="javascript:void(0);"
+            class="card-footer-item"
+            id="next-question"
+          >
             <button class="button is-fullwidth is-info is-rounded">Next</button>
           </a>
         </div>
-        <!-- <footer class="card-footer">
-          <div class="columns is-mobile is-gapless">
-          <div class="column is-one-third">
-            <a href="#" class="card-footer-item" id="prev-question">
-              <button class="button is-fullwidth is-info is-rounded">
-                Prev
-              </button>
-            </a>
-          </div>
-          <div class="column is-one-third">
-            <a href="#" class="card-footer-item">
-              <button
-                id="show-answer"
-                class="button is-fullwidth is-success is-rounded"
-              >
-                Show Answer
-              </button>
-            </a>
-          </div>
-          <div class="column is-one-third">
-            <a href="#" class="card-footer-item" id="next-question">
-              <button class="button is-fullwidth is-info is-rounded">
-                Next
-              </button>
-            </a>
-          </div>
-          </div>
-        </footer> -->
       </div>
     </div>
   </div>
