--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,7 +31,7 @@
    
  <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="#">
+    <a class="navbar-item" href="/">
       
       <h1 class="is-size-3 has-text-weight-bold">Let's UPGRADE!</h1>
     </a>
@@ -64,6 +64,9 @@
           </a>
           <a class="navbar-item" href="/questions/create">
             Add Questions
+          </a>
+          <a class="navbar-item" href="/categories/create">
+            Add Categories
           </a>
           <a class="navbar-item" href="/modify-questions">
             Edit/Remove Questions
