added the note taking feature

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -62,6 +62,12 @@
           <a class="navbar-item" href="/briefings">
             Briefing Guides
           </a>
+          <a class="navbar-item" href="/notes/create">
+            Take A Note
+          </a>
+          <a class="navbar-item" href="/notes/view-notes">
+            View All Notes
+          </a>
           <a class="navbar-item" href="/questions/create">
             Add Questions
           </a>
