--- a/public/css/view-notes.css
+++ b/public/css/view-notes.css
@@ -5,10 +5,14 @@
 
 .card-header-title {
     font-size: 1.5rem;
-    color: #ffffff;
+    color: #000;
 }
 
 .created-at {
     font-size: 0.6rem;
     color: #4a4a4a;
+}
+
+.created-date {
+    padding: 3px;
 }
