styling and added time to the notes

--- a/views/view-notes.ejs
+++ b/views/view-notes.ejs
@@ -22,7 +22,7 @@
             >
               <p><%= note.title %></p>
               <small style="font-size: 0.7rem"
-                >Created on: <%= new Date(note.createdAt).toLocaleDateString()
+                >Created on: <%= new Date(note.createdAt).toLocaleString()
                 %></small
               >
             </div>
