--- a/public/css/editquestions.css
+++ b/public/css/editquestions.css
@@ -17,7 +17,7 @@ h1 {
 }
 
 thead tr {
-    background-color: rgba(62, 144, 240, 0.7);
+    background-color: #23f1d3;
 }
 
 @media only screen and (max-width: 768px) {
