--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 
 <footer> 
   
-  <p class="is-size-6 has-text-centered">&copy Copyright 2023 | A. Butler | All Rights Reserved </p>
+  <p class="is-size-6 has-text-centered footer-text"><strong>Upgrade Study App</strong> by Andrew Butler | &copy 2023 </p>
 </footer>
 </body>
 </html>
