--- a/views/view-notes.ejs
+++ b/views/view-notes.ejs
@@ -38,7 +38,7 @@
               method="POST"
               class="card-footer-item"
             >
-              <button class="button is-small is-danger" type="submit">
+              <button class="button is-small" id="delete-button" type="submit">
                 Delete
               </button>
             </form>
