--- a/public/css/customquestions.css
+++ b/public/css/customquestions.css
@@ -1,124 +1,3 @@
-/* body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #f5f5f5;
-}
-
-.container {
-    max-width: 1000px;
-    margin: 30px auto;
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 4px;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-
-}
-
-tr:nth-of-type(odd) {
-    background: #cacaca;
-}
-
-th {
-    background: #3e90f0;
-    color: white;
-    font-weight: bold;
-}
-
-td, th {
-    padding: 10px;
-    border: 1px solid #e9ecef;
-    text-align: left;
-}
-
-.text-justify {
-    text-align: justify;
-}
-
-@media only screen and (max-width: 760px),
-(min-device-width: 768px) and (max-device-width: 1024px) {
-
-    table, thead, tbody, th, td, tr {
-        display: block;
-    }
-
-    thead tr {
-        position: absolute;
-        top: -9999px;
-        left: -9999px;
-    }
-
-    tr {
-        border: 1px solid #e9ecef;
-    }
-
-    td {
-        border: 1px dotted gray;
-        position: relative;
-        padding-left: 50%;
-        padding-right: 10px;
-        padding-bottom: 10px;
-        padding-top: 10px;
-
-    }
-
-    #questions-category {
-        font-size: 0.7rem;
-    }
-
-    #questions-answer {
-        border-bottom: 2px solid black;
-    }
-
-    td:before {
-        content: "";
-
-        overflow-wrap: break-word;
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        width: 40%;
-        background-color: rgba(62, 144, 240, 0.7);
-        white-space: nowrap;
-        padding: 10px;
-    }
-
-
-
-    td:nth-of-type(1):before {
-        content: "NUMBER";
-        font-size: 1rem;
-        font-weight: 600;
-    }
-
-    td:nth-of-type(2):before {
-        content: "QUESTION";
-        font-size: 1rem;
-        font-weight: 600;
-        overflow-wrap: break-word;
-    }
-
-    td:nth-of-type(3):before {
-        content: "CATEGORY";
-        font-size: 1rem;
-        font-weight: 600;
-    }
-
-    td:nth-of-type(4):before {
-        content: "ANSWER";
-        font-size: 1rem;
-        font-weight: 600;
-    }
-} */
-
-/* Custom CSS */
 .container {
     max-width: 1000px;
     margin: 30px auto;
@@ -138,7 +17,7 @@ h1 {
 }
 
 thead tr {
-    background-color: #23f1d3;
+    background-color: #87CBB9;
 }
 
 @media only screen and (max-width: 768px) {
