--- a/public/css/view-notes.css
+++ b/public/css/view-notes.css
@@ -1,5 +1,5 @@
 .card-header {
-    background-color: #23f1d3;
+    background-color: #87CBB9;
     color: black;
 }
 
@@ -15,4 +15,18 @@
 
 .created-date {
     padding: 3px;
+}
+
+#delete-button {
+    width: 100%;
+    height: 2rem;
+    background-color: rgba(255, 0, 0, 0.5);
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 700;
 }
