changed some layout and colors

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,11 @@ style:'../css/main.css'}) %>
     <div class="container has-text-centered">
       <div class="columns is-vcentered">
         <div class="column is-12">
-          <h1 class="title is-1">Upgrade Study App</h1>
-          <p class="subtitle">The app that will help you ace your upgrade</p>
+          <h1 class="title is-1">FlightPath Advancement</h1>
+          <br />
+          <p class="subtitle">
+            The study app that will help you ace your upgrade!
+          </p>
           <p class="mb-0">Developed By: Andrew Butler</p>
           <br />
           <hr class="divider" />
@@ -20,10 +23,6 @@ style:'../css/main.css'}) %>
 
 <footer class="footer footer-fixed">
   <div class="content has-text-centered">
-    <p>
-      <!-- <strong>Upgrade Study App</strong> by Andrew Butler. The source code is
-      licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. -->
-      <%- include('partials/footer') %>
-    </p>
+    <p><%- include('partials/footer') %></p>
   </div>
 </footer>
