--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,7 +33,7 @@
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
       
-      <h1 class="is-size-3 has-text-weight-bold">Let's UPGRADE!</h1>
+      <h1 class="is-size-3 has-text-weight-bold" style="color: #577D86">Let's UPGRADE!</h1>
     </a>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -88,11 +88,11 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button is-primary">
+          <a class="button" style="background-color: #569DAA; border-radius: 7px;">
             <strong>Sign up</strong>
           </a>
-          <a class="button is-light" href="/login">
-            Log in
+          <a class="button" style="background-color: #fff; color: #569DAA; border-radius: 7px;" href="/login">
+            <strong>Login</strong>
           </a>
         </div>
       </div>
