--- a/public/css/editquestions.css
+++ b/public/css/editquestions.css
@@ -1,3 +1,10 @@
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Merriweather', serif;
+}
+
 .container {
     max-width: 1000px;
     margin: 30px auto;
