--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -1,3 +1,10 @@
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Merriweather', serif;
+}
+
 .card-text.answer.hide {
     opacity: 0;
     max-height: 0;
