--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,6 @@
-
-
 <footer> 
-  
-  <p class="is-size-6 has-text-centered footer-text"><strong>Upgrade Study App</strong> by Andrew Butler | &copy 2023 </p>
+  <p class="is-size-6.5 has-text-centered footer-text"><strong>FlightPath Advancement</strong></p> 
+    <p class="is-size-6.5 has-text-centered footer-text" style="margin-bottom: 10px;">by Andrew Butler | &copy 2023 </p>
 </footer>
 </body>
 </html>
