added some delete note functionality and new styles

--- a/views/questions/view-questions.ejs
+++ b/views/questions/view-questions.ejs
@@ -3,6 +3,10 @@
 <section class="section">
   <h1 class="has-text-centered is-size-1-tablet">All Questions</h1>
   <div class="container">
+    <p class="has-text-centered is-size-5">
+      Total Questions: <%= questions.length %>
+    </p>
+    <br />
     <div class="table-container">
       <table
         class="table is-bordered is-striped is-hoverable is-fullwidth is-mobile-custom"
